# osno2

./: Cargo.toml  design.md  dir.txt  snapshot.txt  src_dir.txt
assets/: default_config.toml
design/: concept2.aseprite  logo_base_file.aseprite  logo_base_file_64.aseprite  logo_base_file_small.aseprite  logo_base_file_smallest.aseprite  logo_base_palette_2.aseprite
design/notes/: design_spec.md
dev_env/config/: wezterm.lua
notes/: library-model.md  pipeline.md
scripts/: setup.sh
src/: audio.rs  config.rs  launcher.rs  main.rs  prompt.rs  worker.rs
src/audio/: audio_engine.rs  audio_state.rs  mod.rs
src/config/: paths.rs
src/core/controller/: event_bus.rs  events.rs  input.rs  mod.rs
src/core/model/: codec_information.rs  library.rs  library_playlist.rs  library_track.rs  mod.rs  reducer.rs  scrollback.rs  state.rs  store.rs  view_state.rs
src/core/view/: frontend.rs
src/fs/: fs_entry.rs  mod.rs
src/spoofed/: mod.rs  spoof_track_meta.rs
src/ui/: app.rs  layout.rs  mod.rs  renderer.rs  view_state.rs
