[package]
name = "osno2"
version = "0.1.0"
edition = "2024"

[dependencies]
# Interface & Rendering
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.1", features = ["crossterm", "macros", "all-widgets"] }

# Async Infrastructure & Channel Communication
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
crossbeam-channel = "0.5.15"

# Audio Core & Decoding
cpal = "0.17.3"
rustfft = "6.4.1"
symphonia = { version = "0.6.0", features = ["all"] }

# Command Pipeline & Structured Data
clap = { version = "4.6.1", features = ["derive", "string"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
directories = "6.0.0"

# WezTerm process spawning & PATH resolution
which = "8.0.2"
opaline = "0.4.1"
redb = "4.1.0"
jwalk = "0.8.1"
dunce = "1.0.5"
notify = "8.2.0"
mime_guess = "2.0.5"
tui-term = "0.3.4"
sha2 = "0.11.0"
ringbuf = "0.5.0"
parking_lot = "0.12.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
